2000-03-09 Joe Berkovitz <joeb@atg.com>                                        
       * option.h                                                              
       * option.cpp                                                            
       * jikes.cpp                                                             
       * system.cpp: rename +CSO option and classpath_search_order             
       variable to +OLDCSO and old_classpath_search_order, and invert          
       sense of option correspondingly.                                        
                         
2000-02-29  Vadim Zaliva  <lord@crocodile.org>

	* Switched to ICU-1.4.0

	* option.cpp (Option): small problem with compilation while both ICU and
	ICONV are present.

	* stream.cpp: 
	* option.h: new ICU header names.

	* configure.in (LDFLAGS): checking for u_getVersion to check is ICU is installed. 

2000-02-21  Vadim Zaliva  <lord@crocodile.org>

	* jikesapi.h (class JikesAPI): reader and writer factories removed - they are 
	duplicating read/write methods functionality. read/write made virtual.

	* jikesapi.cpp:
	* jikesapi.h: method of readers and writers renamed to follow
	project naming conventions.

	* jikes.cpp (main): removed conditional creation of JikesAPI.
	* jikesapi.cpp: indentation, comsetics.
	* jikesapi.h: indentation, comsetics.

2000-02-21  Martin York <myork202@mail.mwfree.net>

	Some Vadim remarks taken in account:

	1) The  default read object now always opens files with the mode "rb".
	2) The classes to manipulate files have been renamed:                           
                                                                                
	FileReader           (Reader was causing problems)                              
        DefaultFileReader                                                               
                                                                                